--- a/index.html
+++ b/index.html
@@ -1,116 +1,210 @@
-<html>
-  <link rel="stylesheet" type="text/css" href="style.css" />
-  <body>
-
-    <div class="first">
-
-    <div class="menu">
+<!DOCTYPE html>
+<html class="no-js" lang="">
+<head>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  <meta charset="utf-8" />
+  <meta name="theme-color" content="#F36E22" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <title>SPACE ATHLETICS FEDERATION™</title>
+  <meta name="description" content="SPACE ATHLETICS FEDERATION™" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+</head>
+<link rel="stylesheet" type="text/css" href="style.css" />
+<body>
+<div class="first">
+  <div class="menu">
     <header>SPACE ATHLETICS FEDERATION™</header>
+  </div>
+
+  <div class="logo">
+    <img src="./imgs/LOGO.png" alt="logo.png">
+  </div>
+
+  <div class="nav">
+    <div class="menu">
+      <div>ABOUT</div>
+      <div>MISSION</div>
+      <div>NEWS</div>
     </div>
+  </div>
+</div>
 
-    <div class="logo">...</div>
-
-    <div class="nav">
-        <div class="menu">
-          <div>ABOUT</div>
-          <div>MISSION</div>
-          <div>NEWS</div>
-        </div>
-    </div>
-
-    </div>
-
-
-    <div class="section">
-        <div class="header">
-            FOUNDERS
-        </div>
-        <div class="cards">
-            <div class="card">
-                <div class="img">
-                    <img src="" alt="img.svg">
-                </div>
-                <div class="name">RAPHAEL ROETTGEN</div>
-                <div class="body">
-                  Raphael Roettgen is founder and managing partner of E2MC Ventures, a fund that invests in Space companies globally.
-                  He is a recognized thought leader on Space, having published an acclaimed introductory book on Space business. He also lectures on Space entrepreneurship and finance at several universities including the Swiss Institute of Technology and the International Space University, and hosts the popular Space Business Podcast.
-                  Raphael is an enthusiastic endurance athlete. He met co-founder Richard during the inaugural South Pole Marathon in 2002 and went on to finish the North Pole Marathon in 2007.
-                  Raphael holds degrees in Finance from the Wharton School and in Machine Learning from PUC-Rio. He also holds the CFA and FRM charters.
-                </div>
-            </div>
-            <div class="card">
-                <div class="img">
-                    <img src="" alt="img.svg">
-                </div>
-                <div class="name">RICHARD DONOVAN</div>
-                <div class="body">
-                  Richard Donovan is founder and race director of some of Earth’s most extreme endurance races, including the North Pole Marathon, Antarctic Ice Marathon, Volcano Marathon and World Marathon Challenge.
-                  He has run across the continents of North America, South America and Europe, won several ultra endurance races, and set a world record for completing marathons on all 7 continents in 4 days 22 hours 3 minutes.
-                  A keynote speaker at numerous events, including at the US State Department and the Association of International Marathons & Distance Races, he has held the position of Director of the International Association of Ultra Runners, the world governing body for the sport.
-                  Richard holds a primary degree in Economics and Classical Civilisation, two postgraduate degrees in Economics, and a professional doctorate in Project Management.
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="section">
-        <div class="header">MANIFESTO</div>
-        <div class="mission">For over 50 years, ever since the first rocket powered a crew into orbit, space activities have been the preserve of government-sponsored specialists. That era of pioneers is in a transition. Soon more people from all walks of life will become involved in this great adventure.</div><br>
-        <div class="mission">Our first polar explorers experienced vast expanses on the surface of our planet; for them, it was like ‘space’ on Earth. Those journeys into the unknown revealed the human desire for new ideas and destinations. Media reports detailing their progress inspired the public’s imagination.</div><br>
-        <div class="mission">Today, Space is the final frontier. Our telescopes peer back in time at supernovas from long before the first dinosaurs. Soon, the first humans will depart for Mars.<br>But first, Space will become the location for increased activity by a wider population, of whom the fittest — our athletes — will be among them.</div>
-        <div class="header">The Space Athletics Federation exists<br>to make that dream a reality.</div>
-        <div class="mission">The Space Athletics Federation’s primary mission is to<br>educate, motivate and activate.<br>
-        <br>
-        Our mission:<br>
-        <br>
-        ★ Organizing connected sporting events on and off Earth<br>
-        ★ Motivating people via SAF™ products, clothing & fitness apps<br>
-        ★ Educating members about Space and Sport via published content<br>
-        ★ Facilitating research on athletics in Space<br>
-        ★ Collaborating with other space sports organisations<br>
-        ★ Creating a Space Athletics Federation category for Children<br>
-        ★ Building a Metaverse presence and digital goods<br>
-        <br>
-        Being the fastest and the strongest links the realms of Sport and Space. Both require a mindset that desires a healthy body, testing individual limits, setting new records, and creating firsts.<br>
-        <br>
-        The global athletics community is also one of the largest, most diverse communities on the planet.<br>
-        <br>
-        Membership of the Space Athletics Federation is open to AstroAthletes from all backgrounds.
+<div class="section">
+  <div class="header">FOUNDERS</div>
+  <div class="cards">
+    <div class="card">
+      <div class="img">
+        <img src="./imgs/LOGO.png" alt="logo.png">
       </div>
-        <div class="header">We will strive for the stars together.</div>
-    </div>
+      <div class="name">RAPHAEL ROETTGEN</div>
+      <div class="body">
+        <p>
+          Raphael Roettgen is founder and managing partner of E2MC Ventures, a
+          fund that invests in Space companies globally.<br /><br />
+        </p>
 
-    <div class="section">
+        <p>
+          He is a recognized
+          thought leader on Space, having published an acclaimed introductory
+          book on Space business. He also lectures on Space entrepreneurship
+          and finance at several universities including the Swiss Institute of
+          Technology and the International Space University, and hosts the
+          popular Space Business Podcast.<br /><br />
+        </p>
 
-      <div class="articles">
-          <div class="img">
-            <img src="" alt="img.svg">
-          </div>
-        <h4>Dublin Track Club 4x1 mile</h4>
-        <p>Paul Robinson, Sean Tobin, Andrew Coscoran, Hiko Haso & Coach Feidhlim Kelly by Johnny Zhang.</p>
+        <p>
+          Raphael is an enthusiastic endurance
+          athlete. He met co-founder Richard during the inaugural South Pole
+          Marathon in 2002 and went on to finish the North Pole Marathon in
+          2007.<br /><br />
+        </p>
+
+        <p>
+          Raphael holds degrees in Finance from the Wharton School and
+          in Machine Learning from PUC-Rio. He also holds the CFA and FRM
+          charters.<br /><br />
+        </p>
       </div>
-
-      <div class="updates">
-        <h4>The Times</h4>
-        <p>The race for space:<br>Sky is truly the limit for Richard Donovan, an ultra-runner from Mervue.</p>
-        <h4>The42</h4>
-        <p>Nicholas Griggs finished narrowly behind Andrew Coscoran of SAF™ as he eclipsed the European U20 record. Coscoran took the win in a time of 3:56.27.</p>
-        <h4>The Irish Times</h4>
-        <p>Richard Donovan: Zen and the art of running across America ... again!<br>Ultra-marathon runner to set off on a 5,260-odd kilometre trek across country.</p>
-        <h4>Irish Examiner</h4>
-        <p>Forty miles a day, every day, for three straight months.<br>Why does Richard Donovan choose this life?</p>
-      </div>
-
     </div>
-
-    <div class="social">
-      <div class="footer">
-        <div>TWITTER</div>
-        <div>INSTAGRAM</div>
-        <div>META</div>
+    <div class="card">
+      <div class="img">
+        <img src="./imgs/LOGO.png" alt="logo.png">
       </div>
-      <div class="footer">Copyright © 2022 SPACE ATHLETICS FEDERATION™</div>
+      <div class="name">RICHARD DONOVAN</div>
+      <div class="body">
+        <p>
+          Richard Donovan is founder and race director of some of Earth’s most
+          extreme endurance races, including the North Pole Marathon,
+          Antarctic Ice Marathon, Volcano Marathon and World Marathon
+          Challenge.<br /><br />
+        </p>
+        <p>
+          He has run across the continents of North America, South
+          America and Europe, won several ultra endurance races, and set a
+          world record for completing marathons on all 7 continents in 4 days
+          22 hours 3 minutes.<br /><br />
+        </p>
+        <p>
+          A keynote speaker at numerous events, including
+          at the US State Department and the Association of International
+          Marathons & Distance Races, he has held the position of Director of
+          the International Association of Ultra Runners, the world governing
+          body for the sport.<br /><br />
+        </p>
+        <p>
+          Richard holds a primary degree in Economics and
+          Classical Civilisation, two postgraduate degrees in Economics, and a
+          professional doctorate in Project Management.<br /><br />
+        </p>
+      </div>
     </div>
+  </div>
+</div>
 
-  </body>
+<div class="section">
+  <div class="header">MANIFESTO</div>
+  <div class="mission">
+    For over 50 years, ever since the first rocket powered a crew into
+    orbit, space activities have been the preserve of government-sponsored
+    specialists. That era of pioneers is in a transition. Soon more people
+    from all walks of life will become involved in this great adventure.
+  </div>
+  <br />
+  <div class="mission">
+    Our first polar explorers experienced vast expanses on the surface of
+    our planet; for them, it was like ‘space’ on Earth. Those journeys into
+    the unknown revealed the human desire for new ideas and destinations.
+    Media reports detailing their progress inspired the public’s
+    imagination.
+  </div>
+  <br />
+  <div class="mission">
+    Today, Space is the final frontier. Our telescopes peer back in time at
+    supernovas from long before the first dinosaurs. Soon, the first humans
+    will depart for Mars.<br />But first, Space will become the location for
+    increased activity by a wider population, of whom the fittest — our
+    athletes — will be among them.
+  </div>
+  <div class="header">
+    The Space Athletics Federation exists<br />to make that dream a reality.
+  </div>
+  <div class="mission">
+    The Space Athletics Federation’s primary mission is to educate,
+    motivate and activate.<br />
+    <br />
+    Our mission:<br />
+    <br />
+    ★ Organizing connected sporting events on and off Earth<br />
+    ★ Motivating people via SAF™ products, clothing & fitness apps<br />
+    ★ Educating members about Space and Sport via published content<br />
+    ★ Facilitating research on athletics in Space<br />
+    ★ Collaborating with other space sports organisations<br />
+    ★ Creating a Space Athletics Federation category for Children<br />
+    ★ Building a Metaverse presence and digital goods<br />
+    <br />
+    Being the fastest and the strongest links the realms of Sport and Space.
+    Both require a mindset that desires a healthy body, testing individual
+    limits, setting new records, and creating firsts.<br />
+    <br />
+    The global athletics community is also one of the largest, most diverse
+    communities on the planet.<br />
+    <br />
+    Membership of the Space Athletics Federation is open to AstroAthletes
+    from all backgrounds.
+  </div>
+  <div class="header">We will strive for the stars together.</div>
+</div>
+
+<div class="section news">
+  <div class="articles">
+    <div class="img">
+      <img src="./imgs/saf_v.jpeg" alt="saf_v.jpeg">
+    </div>
+    <br />
+    <div class="news">
+      <h4>Dublin Track Club 4x1 mile</h4>
+      <p>
+        Paul Robinson, Sean Tobin, Andrew Coscoran, Hiko Haso & Coach Feidhlim
+        Kelly by Johnny Zhang. →
+      </p>
+    </div>
+  </div>
+
+  <div class="updates">
+    <h4>The Times</h4>
+    <p>
+      The race for space:<br />Sky is truly the limit for Richard Donovan,<br />
+      an ultra-runner from Mervue.<br /><br />
+    </p>
+    <h4>The42</h4>
+    <p>
+      Nicholas Griggs finished narrowly behind Andrew Coscoran of SAF™ as he
+      eclipsed the European U20 record. Coscoran took the win in a time of
+      3:56.27.<br /><br />
+    </p>
+    <h4>The Irish Times</h4>
+    <p>
+      Richard Donovan: Zen and the art of running across America ...
+      again!<br />Ultra-marathon runner to set off on a 5,260-odd kilometre
+      trek across country.<br /><br />
+    </p>
+    <h4>Irish Examiner</h4>
+    <p>
+      Forty miles a day, every day, for three straight months.<br />Why does
+      Richard Donovan choose this life?<br /><br />
+    </p>
+  </div>
+</div>
+
+<div class="social">
+  <div class="footer">
+    <div>TWITTER</div>
+    <div>INSTAGRAM</div>
+    <div>META</div>
+  </div>
+  <div class="footer">Copyright © 2022 SPACE ATHLETICS FEDERATION™</div>
+</div>
+</body>
 </html>
