new div for goals

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
   <div class="mission">
     The Space Athletics Federation’s primary mission is to educate,
     motivate and activate.<br />
+  <div class="goals">
     <br />
     Our mission:<br />
     <br />
@@ -144,6 +145,7 @@
     ★ Creating a Space Athletics Federation category for Children<br />
     ★ Building a Metaverse presence and digital goods<br />
     <br />
+  </div>
     Being the fastest and the strongest links the realms of Sport and Space.
     Both require a mindset that desires a healthy body, testing individual
     limits, setting new records, and creating firsts.<br />
