--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
   <div class="mission">
     The Space Athletics Federation’s primary mission is to educate,
     motivate and activate.<br />
+  </div>
   <div class="goals">
     <br />
     Our mission:<br />
@@ -146,6 +147,7 @@
     ★ Building a Metaverse presence and digital goods<br />
     <br />
   </div>
+  <div class="mission">
     Being the fastest and the strongest links the realms of Sport and Space.
     Both require a mindset that desires a healthy body, testing individual
     limits, setting new records, and creating firsts.<br />
