--- a/index.html
+++ b/index.html
@@ -153,9 +153,7 @@
     limits, setting new records, and creating firsts.<br />
     <br />
     The global athletics community is also one of the largest, most diverse
-    communities on the planet.<br />
-    <br />
-    Membership of the Space Athletics Federation is open to AstroAthletes
+    communities on the planet. Membership of the Space Athletics Federation is open to AstroAthletes
     from all backgrounds.
   </div>
   <div class="header">We will strive for the stars together.</div>
