--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <img src="./imgs/LOGO.png" alt="logo.png">
       </div>
       <div class="name">RAPHAEL ROETTGEN</div>
+      <div class="line"></div>
       <div class="body">
         <p>
           Raphael Roettgen is founder and managing partner of E2MC Ventures, a
@@ -73,6 +74,7 @@
         <img src="./imgs/LOGO.png" alt="logo.png">
       </div>
       <div class="name">RICHARD DONOVAN</div>
+      <div class="line"></div>
       <div class="body">
         <p>
           Richard Donovan is founder and race director of some of Earth’s most
