--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
     <br />
     <div class="news">
       <h4>Dublin Track Club 4x1 mile</h4>
-      <p>
+      <a href="https://aqv8y1b380wnq1lp-63637324034.shopifypreview.com">
         Paul Robinson, Sean Tobin, Andrew Coscoran, Hiko Haso & Coach Feidhlim
         Kelly by Johnny Zhang. →
-      </p>
+      </a>
     </div>
   </div>
 
