--- a/index.html
+++ b/index.html
@@ -169,9 +169,8 @@
     <br />
     <div class="news">
       <h4>Dublin Track Club 4x1 mile</h4>
-      <a href="https://ow2h5bsiqos6vv6n-63637324034.shopifypreview.com">
-        Paul Robinson, Sean Tobin, Andrew Coscoran, Hiko Haso & Coach Feidhlim
-        Kelly by Johnny Zhang. →
+      <a href="https://spaceathleticsfederaton.myshopify.com/">
+        The Dublin Track Club was established in 2016 with the aim to grow and create an elite training group for aspiring athletes in Dublin and its greater area. The group has several of Ireland's leading talent - both male and female. →
       </a>
     </div>
   </div>
