--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="cards">
     <div class="card">
       <div class="img">
-        <img src="./imgs/LOGO.png" alt="logo.png">
+        <img src="./imgs/raphael.png" alt="raphael.png">
       </div>
       <div class="name">RAPHAEL ROETTGEN</div>
       <div class="line"></div>
@@ -71,7 +71,7 @@
     </div>
     <div class="card">
       <div class="img">
-        <img src="./imgs/LOGO.png" alt="logo.png">
+        <img src="./imgs/richard.png" alt="richard.png">
       </div>
       <div class="name">RICHARD DONOVAN</div>
       <div class="line"></div>
