--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
   <div class="nav">
     <div class="menu">
-      <div>ABOUT</div>
       <div>MISSION</div>
+      <div>ARTICLES</div>
       <div>NEWS</div>
     </div>
   </div>
