--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <div class="section news">
   <div class="articles">
     <div class="img">
-      <img src="./imgs/saf_v.jpeg" alt="saf_v.jpeg">
+      <img src="./imgs/saf_h.jpeg" alt="saf_h.jpeg">
     </div>
     <br />
     <div class="news">
