--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="nav">
     <div class="menu">
       <div>MISSION</div>
-      <div>ARTICLES</div>
+      <div>EVENTS</div>
       <div>NEWS</div>
     </div>
   </div>
@@ -160,6 +160,8 @@
   </div>
   <div class="header">We will strive for the stars together.</div>
 </div>
+
+<div class="header">EVENTS</div>
 
 <div class="header">
   <img src="./imgs/saf_h.jpeg" alt="saf_h.jpeg">
