--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
   <div class="nav">
     <div class="menu">
-      <div>MISSION</div>
-      <div>EVENTS</div>
-      <div>NEWS</div>
+      <div><a href="#events">EVENTS</a></div>
+      <div><a href="#manifesto">MISSION</a></div>
+      <div><a href="#news">NEWS</a></div>
     </div>
   </div>
 </div>
@@ -106,7 +106,7 @@
 </div>
 
 <div class="section">
-  <div class="header">MANIFESTO</div>
+  <div class="header" id="manifesto">MANIFESTO</div>
   <div class="mission">
     For over 50 years, ever since the first rocket powered a crew into
     orbit, space activities have been the preserve of government-sponsored
@@ -161,13 +161,13 @@
   <div class="header">We will strive for the stars together.</div>
 </div>
 
-<div class="header">EVENTS</div>
+<div class="header" id="events">EVENTS</div>
 
 <div class="header">
   <img src="./imgs/saf_h.jpeg" alt="saf_h.jpeg">
 </div>
 
-<div class="header">NEWS</div>
+<div class="header" id="news">NEWS</div>
 
 <div class="section news">
   <div class="articles">
