--- a/index.html
+++ b/index.html
@@ -166,6 +166,12 @@
 <div class="header">
   <img src="./imgs/saf_h.jpeg" alt="saf_h.jpeg">
 </div>
+<div class="title"><h4>Dublin Track Club 4x1 mile</h4></div>
+<div class="subtitle">
+  <a href="/articles/01.html">
+  Read full article →
+  </a>
+</div>
 
 <div class="header" id="news">NEWS</div>
 
