--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 </div>
 <div class="title"><h4>Dublin Track Club 4x1 mile</h4></div>
 <div class="subtitle">
-  <a href="/articles/01.html">
+  <a href="01.html">
   Read full article →
   </a>
 </div>
