--- a/01.html
+++ b/01.html
@@ -15,13 +15,11 @@
 <body>
 
   <div class="menu">
-    <header>SPACE ATHLETICS FEDERATION™</header>
+    <header><a href="index.html">SPACE ATHLETICS FEDERATION™</a></header>
   </div>
 
   <div class="logo">
     <img src="./imgs/saf_h.jpeg" alt="logo.png">
-    <img src="./imgs/saf_v.jpeg" alt="logo.png">
-    <img src="./imgs/saf_v.jpeg" alt="logo.png">
     <img src="./imgs/saf_v.jpeg" alt="logo.png">
     <img src="./imgs/saf_v.jpeg" alt="logo.png">
     <img src="./imgs/saf_v.jpeg" alt="logo.png">
@@ -48,9 +46,24 @@
   background-image: none;
   }
 
+  .menu a {
+  color: black;
+  margin-top: 2rem;
+  font-family: PPNeueMontreal-Medium, serif;
+  font-size: 5vw;
+  max-width: 1200px;
+  }
+
   .logo img {
   padding: 2rem;
   width: 80%;
   }
+
+  @media screen and (min-width: 1500px) {
+  
+  .menu a {
+    font-size: 4.8rem;
+  }
+}
 
 </style>
