--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <br />
     ★ Organizing connected sporting events on and off Earth<br />
     ★ Motivating people via SAF™ products, clothing & fitness apps<br />
-    ★ Educating members about Space and Sport via published content<br />
+    ★ Educating about Space and Sport via published content<br />
     ★ Facilitating research on athletics in Space<br />
     ★ Collaborating with other space sports organisations<br />
     ★ Creating a Space Athletics Federation category for Children<br />
