--- a/01.html
+++ b/01.html
@@ -1,96 +1,101 @@
 <!DOCTYPE html>
 <html class="no-js" lang="">
-<head>
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-  <meta charset="utf-8" />
-  <meta name="theme-color" content="#F36E22" />
-  <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <title>SPACE ATHLETICS FEDERATION™</title>
-  <meta name="description" content="SPACE ATHLETICS FEDERATION™" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
-<link rel="stylesheet" type="text/css" href="style.css" />
-<body>
+  <head>
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <meta charset="utf-8" />
+    <meta name="theme-color" content="#F36E22" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>SPACE ATHLETICS FEDERATION™</title>
+    <meta name="description" content="SPACE ATHLETICS FEDERATION™" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <body>
+    <div class="menu">
+      <header><a href="index.html">SPACE ATHLETICS FEDERATION™</a></header>
+    </div>
 
-  <div class="menu">
-    <header><a href="index.html">SPACE ATHLETICS FEDERATION™</a></header>
-  </div>
+    <div class="logo">
+      <img src="./imgs/saf_h.jpeg" alt="logo.png" />
+      <div class="header">
+        Paul Robinson, Sean Tobin, Andrew Coscoran, Hiko Haso & Coach Feidhlim
+        Kelly
+      </div>
+      <img src="./imgs/saf_v.jpeg" alt="logo.png" />
+      <div class="header">Andrew Coscoran</div>
+      <img src="./imgs/image1.jpeg" alt="logo.png" />
+      <div class="header">Hiko Haso</div>
+      <img src="./imgs/image2.jpeg" alt="logo.png" />
+      <div class="header">Paul Robinson</div>
+    </div>
+    <div class="header">
+      <p>
+        Est placerat in egestas erat imperdiet sed euismod nisi. Lectus sit amet
+        est placerat <br />
+        in egestas erat imperdiet sed. Massa sapien faucibus et molestie ac
+        feugiat sed. <br />
+        Pellentesque massa placerat duis ultricies lacus sed turpis tincidunt.
+        <br />
+        <br />Lobortis feugiat vivamus at augue eget arcu dictum. <br />In nulla
+        posuere sollicitudin aliquam ultrices sagittis orci. <br />Convallis
+        posuere morbi leo urna molestie at elementum eu facilisis. <br />Ut
+        aliquam purus sit amet luctus venenatis lectus. Scelerisque varius morbi
+        enim nunc <br />faucibus a. Integer enim neque volutpat ac. Tincidunt
+        augue interdum velit euismod <br />in pellentesque massa. Aliquam sem
+        fringilla ut morbi tincidunt augue. Nibh venenatis <br />cras sed felis
+        eget velit aliquet sagittis id. Mattis rhoncus urna neque viverra justo
+        <br />nec ultrices dui sapien. Semper viverra nam libero justo laoreet
+        sit. Ut tortor <br />pretium viverra suspendisse potenti nullam ac
+        tortor. Donec adipiscing tristique <br />risus nec feugiat in. Quis
+        hendrerit dolor magna eget.
+      </p>
+    </div>
 
-  <div class="logo">
-    <img src="./imgs/saf_h.jpeg" alt="logo.png">
-    <div class="header">
-      Paul Robinson, Sean Tobin, Andrew Coscoran, Hiko Haso & Coach Feidhlim Kelly
-    </div>  
-    <img src="./imgs/saf_v.jpeg" alt="logo.png">
-    <div class="header">
-      Andrew Coscoran
-    </div> 
-    <img src="./imgs/image1.jpeg" alt="logo.png">
-    <div class="header">
-      Hiko Haso
-    </div> 
-    <img src="./imgs/image2.jpeg" alt="logo.png">
-    <div class="header">
-      Paul Robinson
-    </div> 
-  </div>
-  <div class="header">
-    <p>Est placerat in egestas erat imperdiet sed euismod nisi. Lectus sit amet est placerat
-    <br> in egestas erat imperdiet sed. Massa sapien faucibus et molestie ac feugiat sed. 
-    <br> Pellentesque massa placerat duis ultricies lacus sed turpis tincidunt.
-    <br>
-    <br>Lobortis feugiat vivamus at augue eget arcu dictum. 
-    <br>In nulla posuere sollicitudin aliquam ultrices sagittis orci. 
-    <br>Convallis posuere morbi leo urna molestie at elementum eu facilisis. 
-    <br>Ut aliquam purus sit amet luctus venenatis lectus. Scelerisque varius morbi enim nunc 
-    <br>faucibus a. Integer enim neque volutpat ac. Tincidunt augue interdum velit euismod 
-    <br>in pellentesque massa. Aliquam sem fringilla ut morbi tincidunt augue. Nibh venenatis
-    <br>cras sed felis eget velit aliquet sagittis id. Mattis rhoncus urna neque viverra justo
-    <br>nec ultrices dui sapien. Semper viverra nam libero justo laoreet sit. Ut tortor 
-    <br>pretium viverra suspendisse potenti nullam ac tortor. Donec adipiscing tristique
-    <br>risus nec feugiat in. Quis hendrerit dolor magna eget.</p>
-  </div>  
-  
-
-<div class="social">
-  <div class="footer">
-    <div><a href="https://twitter.com/SpaceAthletics">TWITTER</a></div>
-    <div><a href="https://www.instagram.com/spaceathleticsfederation">INSTAGRAM</a></div>
-    <div><a href="https://www.facebook.com/SpaceAthleticsFederation">META</a></div>
-  </div>
-  <div class="footer">Copyright © 2022 SPACE ATHLETICS FEDERATION™</div>
-</div>
-</body>
+    <div class="social">
+      <div class="footer">
+        <div><a href="https://twitter.com/SpaceAthletics">TWITTER</a></div>
+        <div>
+          <a href="https://www.instagram.com/spaceathleticsfederation"
+            >INSTAGRAM</a
+          >
+        </div>
+        <div>
+          <a href="https://www.facebook.com/SpaceAthleticsFederation">META</a>
+        </div>
+      </div>
+      <div class="footer">Copyright © 2022 SPACE ATHLETICS FEDERATION™</div>
+    </div>
+  </body>
 </html>
 
 <style>
-
   body {
-  background-color: whitesmoke;
-  color: black;
-  background-image: none;
+    background-color: whitesmoke;
+    color: black;
+    background-image: none;
   }
 
   .menu a {
-  color: black;
-  margin-top: 2rem;
-  font-family: PPNeueMontreal-Medium, serif;
-  font-size: 5vw;
-  max-width: 1200px;
+    color: black;
+    margin-top: 2rem;
+    font-family: PPNeueMontreal-Medium, serif;
+    font-size: 5vw;
+    max-width: 1200px;
   }
 
   .logo img {
-  padding: 2rem;
-  width: 80%;
+    padding: 2rem;
+    width: 80%;
   }
 
   @media screen and (min-width: 1500px) {
-  
-  .menu a {
-    font-size: 4.8rem;
+    .menu a {
+      font-size: 4.8rem;
+    }
   }
-}
-
 </style>
