--- a/01.html
+++ b/01.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
-<html class="no-js" lang="">
+<html lang="en">
   <head>
-    <meta
-      http-equiv="Cache-Control"
-      content="no-cache, no-store, must-revalidate"
-    />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
     <meta charset="utf-8" />
     <meta name="theme-color" content="#F36E22" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
