--- a/index.html
+++ b/index.html
@@ -50,29 +50,19 @@
             <div class="line"></div>
             <div class="body">
               <p>
-                Raphael Roettgen is founder and managing partner of E2MC
-                Ventures, a fund that invests in Space companies globally.<br /><br />
+                Raphael Roettgen is founder and managing partner of E2MC Ventures, a fund that invests in space companies globally.<br /><br />
               </p>
 
               <p>
-                He is a recognized thought leader on Space, having published an
-                acclaimed introductory book on Space business. He also lectures
-                on Space entrepreneurship and finance at several universities
-                including the Swiss Institute of Technology and the
-                International Space University, and hosts the popular Space
-                Business Podcast.<br /><br />
+                He is a recognized thought leader on Space and lectures on space entrepreneurship and finance at several universities, including the Swiss Institute of Technology and the International Space University. Raphael has also published an acclaimed introductory book on space business and hosts the popular Space Business Podcast. <br /><br />
               </p>
 
               <p>
-                Raphael is an enthusiastic endurance athlete. He met co-founder
-                Richard during the inaugural South Pole Marathon in 2002 and
-                went on to finish the North Pole Marathon in 2007.<br /><br />
+                With previous senior roles in investment management firms and banks, Raphael is an advisor on space to both institutional investors and governments.<br /><br />
               </p>
 
               <p>
-                Raphael holds degrees in Finance from the Wharton School and in
-                Machine Learning from PUC-Rio. He also holds the CFA and FRM
-                charters.<br /><br />
+                He holds degrees in Finance from the Wharton School, Artificial Intelligence from PUC-Rio and Space Studies from the International Space University.<br /><br />
               </p>
             </div>
           </div>
@@ -84,28 +74,16 @@
             <div class="line"></div>
             <div class="body">
               <p>
-                Richard Donovan is founder and race director of some of Earth’s
-                most extreme endurance races, including the North Pole Marathon,
-                Antarctic Ice Marathon, Volcano Marathon and World Marathon
-                Challenge.<br /><br />
+                Richard Donovan is founder and race director of Earth’s most extreme endurance races, including the North Pole Marathon, Antarctic Ice Marathon, Volcano Marathon and World Marathon Challenge (7 Marathons 7 Continents 7 Days).<br /><br />
               </p>
               <p>
-                He has run across the continents of North America, South America
-                and Europe, won several ultra endurance races, and set a world
-                record for completing marathons on all 7 continents in 4 days 22
-                hours 3 minutes.<br /><br />
+                He is the first person in history to run marathons at both the North and South Poles, set a world record for completing marathons on all 7 continents in 4 days 22 hours 3 minutes, and has run across the continents of North America, South America and Europe.<br /><br />
               </p>
               <p>
-                A keynote speaker at numerous events, including at the US State
-                Department and the Association of International Marathons &
-                Distance Races, he has held the position of Director of the
-                International Association of Ultra Runners, the world governing
-                body for the sport.<br /><br />
+                A former director of the global governing body for ultramarathon running, Richard has been race director at several World and Commonwealth Championships. He has also been a keynote speaker at numerous events, including at the US State Department and the Association of International Marathons & Distance Races.<br /><br />
               </p>
               <p>
-                Richard holds a primary degree in Economics and Classical
-                Civilisation, two postgraduate degrees in Economics, and a
-                professional doctorate in Project Management.<br /><br />
+                Richard holds a primary degree in Economics and Classical Civilization, two postgraduate degrees in Economics and a professional doctorate in Project Management.<br /><br />
               </p>
             </div>
           </div>
