--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </p>
 
               <p>
-                He is a recognized thought leader on Space and lectures on space entrepreneurship and finance at several universities, including the Swiss Institute of Technology and the International Space University. Raphael has also published an acclaimed introductory book on space business and hosts the popular Space Business Podcast. <br /><br />
+                He is a recognized thought leader on Space and lectures on space entrepreneurship and finance at several universities, including the Swiss Institute of Technology and the International Space University. Raphael has also published an acclaimed introductory book on space business and hosts the popular Space Business Podcast.<br /><br />
               </p>
 
               <p>
@@ -62,7 +62,11 @@
               </p>
 
               <p>
-                He holds degrees in Finance from the Wharton School, Artificial Intelligence from PUC-Rio and Space Studies from the International Space University.<br /><br />
+                A lecturer and alumnus of the International Space University, he holds degrees in Finance from the Wharton School, Artificial Intelligence from PUC-Rio and Space Studies from the International Space University.<br /><br />
+              </p>
+
+              <p>
+                He is a German and Brazilian citizen and fully fluent in German, English and Portuguese.<br /><br />
               </p>
             </div>
           </div>
