--- a/index.html
+++ b/index.html
@@ -94,29 +94,22 @@
         </div>
       </div>
 
-      <div class="header" id="manifesto">MANIFESTO</div>
+      <div class="header" id="manifesto">MISSION</div>
       <div class="section">
         <div class="mission">
-          For over 50 years, ever since the first rocket powered a crew into
-          orbit, space activities have been the preserve of government-sponsored
-          specialists. That era of pioneers is in a transition. Soon more people
-          from all walks of life will become involved in this great adventure.
+          For over 50 years, ever since the first rocket powered a crew into orbit, space activities have been the preserve of government-sponsored specialists. That era of pioneers is in a transition. Soon more people from all walks of life will become involved in this great adventure.
         </div>
         <br />
         <div class="mission">
-          Our first polar explorers experienced vast expanses on the surface of
-          our planet; for them, it was like ‘space’ on Earth. Those journeys
-          into the unknown revealed the human desire for new ideas and
-          destinations. Media reports detailing their progress inspired the
-          public’s imagination.
+          Our first polar explorers experienced vast expanses on the surface of our planet; for them, it was like ‘space’ on Earth. Those journeys into the unknown revealed the human desire for new ideas and destinations. Media reports detailing their progress inspired the public’s imagination.
         </div>
         <br />
         <div class="mission">
-          Today, Space is the final frontier. Our telescopes peer back in time
-          at supernovas from long before the first dinosaurs. Soon, the first
-          humans will depart for Mars.<br />But first, Space will become the
-          location for increased activity by a wider population, of whom the
-          fittest — our athletes — will be among them.
+          Today, Space is the final frontier. Our telescopes peer back in time at supernovas from long before the first dinosaurs. Soon, the first humans will depart for Mars.
+        </div>
+        <br />
+        <div class="mission">
+          But first, Space will become the location for increased activity by a wider population, of whom the fittest — our athletes — will be among them.
         </div>
         <div class="header"> 
           
@@ -127,29 +120,23 @@
         </div>
         <div class="mission">
           The Space Athletics Federation’s primary mission is to educate,
-          motivate and activate.<br />
+          motivate and activate. Our mission:<br />
         </div>
         <div class="goals">
           <br />
-          Our mission:<br />
-          <br />
-          ★ Organizing connected sporting events on and off Earth<br />
-          ★ Motivating people via SAF™ products, clothing & fitness apps<br />
-          ★ Educating about Space and Sport via published content<br />
-          ★ Facilitating research on athletics in Space<br />
-          ★ Collaborating with other space sports organisations<br />
-          ★ Creating a Space Athletics Federation category for Children<br />
-          ★ Building a Metaverse presence and digital goods<br />
+          ★ Organizing connected sporting events on and off Earth.<br />
+          ★ Motivating people via Space Athletics Federation products, clothing and fitness apps.<br />
+          ★ Educating members about Space and Sport via published articles and related content.<br />
+          ★ Facilitating research on athletics in Space.<br />
+          ★ Collaborating with other space sports organisations.<br />
+          ★ Creating a Space Athletics Federation category for Children.<br />
+          ★ Building a Metaverse presence and creating digital goods.<br />
           <br />
         </div>
         <div class="mission">
-          Being the fastest and the strongest links the realms of Sport and
-          Space. Both require a mindset that desires a healthy body, testing
-          individual limits, setting new records, and creating firsts.<br />
+          Being the fastest and the strongest links the realms of Sport and Space. Both require a mindset that desires a healthy body, testing individual limits, setting new records, and creating firsts.<br />
           <br />
-          The global athletics community is also one of the largest, most
-          diverse communities on the planet. Membership of the Space Athletics
-          Federation is open to AstroAthletes from all backgrounds.
+          The global athletics community is one of the largest, most diverse communities on the planet. Membership of the Space Athletics Federation is open to AstroAthletes from all backgrounds.
         </div>
         <div class="header">We will strive for the stars together.</div>
       </div>
