--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
       <div class="section">
         <div class="subtitle">
-          <a href="01.html"> <br><br>Read all news → </a>
+          <a href="feed.html"> <br><br>Read all news → </a>
         </div>
       </div>
 
